--- a/style/style.css
+++ b/style/style.css
@@ -77,4 +77,37 @@ nav li a{
     color: white;
     font-family: fira sans;
 }
+/* pillars style */
+#pillars{
+  margin: 50px 160px;
+ 
+}
+.pillars-container h2{
+  font-size: 40px;
+  font-weight: bold;
+  font-family: fira sans;
+}
+.pillars-discription{
+   display: flex;
+   gap: 20px;
+   padding-top: 25px;
+
+    
+   
+}
+.pillars-content{
+  padding: 38px;
+  border:1px solid #ffffff;
+  border-radius: 15px;
+  background-color: #f5f5f5;
+}
+.pillars-content h3{
+      font-size: 20px;
+      font-family: fira sans;
+      font-weight: bold;
+      padding: 10px 0;
+}
+.pillars-content p{
+  font-size: 20px;
+}
 
