--- a/style/style.css
+++ b/style/style.css
@@ -248,6 +248,70 @@ nav li a{
   color: #ffffff;
   border-radius: 10px;
 }
+/* Donate */
+.donate-container{
+    margin: 50px 160px;
+    text-align: center ;
+    justify-content: center;
+    align-items: center;
+
+}
+.donate-container h1{
+    font-size: 40px;
+    font-weight: bold;
+    font-family: fira sans;
+    padding: 20px 0;
+}
+.donate-container p{
+  font-size: 15px;
+  font-family: fira sans;
+  font-weight: 400;
+}
+.donate-items ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 30px 0;
+    
+
+}
+.donate-items li{
+  list-style: none;
+  font-size: 30px;
+  font-family: fira sans;
+  font-weight: bold;
+  border-radius: 12px;
+  padding: 25px 50px;
+  border: 1px solid #f5f5f5;
+  background-color: #f5f5f5;
+  
+}
+.donate-items ul li:hover{
+        background-color: #5490f5;
+}
+.donate-input{
+  padding: 20px 320px;
+  font-size: 22px;
+  font-family: fira sans;
+  font-weight: 400;
+  /* border: 1px solid #dbdbdb; */
+  background-color: #f5f5f5;
+  border: none;
+  box-shadow: 1px 1px  #dbdbdb;
+  margin: 20px 0;
+ 
+}
+.donate-btn{
+  padding: 15px 25px;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: fira sans;
+  background-color: #006a50;
+  border-style: none;
+  color: #ffffff;
+  border-radius: 10px;
+}
 /* promise-style  */
 #promise{
     margin: 30px 160px; 
@@ -270,14 +334,15 @@ nav li a{
   font-size: 16px;
   font-family: fira sans;
   font-weight: 400;
-  padding: 10px 0;
+  padding: 20px 0;
   opacity: .8;
 }
 .promise-content{
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 10px;
+  /* padding-bottom: 10px; */
+  padding:20px 0 ;
 }
 input[type="email"] {
     padding: 20px;
@@ -286,6 +351,7 @@ input[type="email"] {
     border-radius: 4px 0 0 4px;
     outline: none;
     width: 600px;
+    
 
 }
 .promise-content .promise-btn{
