--- a/style/style.css
+++ b/style/style.css
@@ -278,7 +278,7 @@ nav li a{
 }
 .donate-items li{
   list-style: none;
-  text-decoration: none;
+  
   font-size: 30px;
   font-family: fira sans;
   font-weight: bold;
@@ -287,6 +287,9 @@ nav li a{
   border: 1px solid #f5f5f5;
   background-color: #f5f5f5;
   
+}
+.donate-items li a{
+  text-decoration: none;
 }
 .donate-items ul li:hover{
         background-color: #5490f5;
