--- a/style/style.css
+++ b/style/style.css
@@ -193,6 +193,31 @@ nav li a{
   border-radius: 15px;
   background-color: #f7ebcf;
 }
+/* testimonial */
+.icon{
+  margin: 30px 160px;
+  padding: 30px 30px;
+  border: 1px solid #f5f5f5;
+  border-radius: 12px;
+  box-shadow: 1px 1px 0px #f5f5f5;
+  position: relative;
+  text-align: left;
+}
+.icon-symbol{
+  
+  font-size: 170px;
+  color: #b7b7b7;
+  position: absolute;
+  top: -25px;
+  left:25px;
+  opacity: 0.5;
+}
+.sir{
+  padding-top: 10px;
+}
+.icon-item p{
+  font-size: 20px;
+}
 /* news-style */
 #news{
   margin: 50px 160px; 
