website last done

--- a/style/style.css
+++ b/style/style.css
@@ -411,12 +411,12 @@ input[type="email"] {
 
 }
 /* Footer-item */
-/* #footer-item{
+#footer-item{
    margin: 80px 160px;
    text-align: center;
 }
 .icon-icon{
   margin-top: 40px;
-} */
+}
 
 
